--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,12 @@ img {
   margin: auto;
 }
 
+@media (max-width: 640px) {
+  .container {
+    width: 90%;
+  }
+}
+
 .button {
   background-color: #ffd200;
   color: #333;
@@ -80,5 +86,138 @@ img {
   border-radius: 10px;
   margin-left: 30px;
   font-size: 13px;
+}
+
+.main {
+  background-color: #f5f5f5;
+}
+
+.main-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 50px 0 40px 0;
+}
+
+@media (max-width: 1200px) {
+  .main-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.main-text {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+@media (max-width: 1200px) {
+  .main-text {
+    margin-bottom: 40px;
+  }
+}
+
+.main-text__title {
+  font-size: 40px;
+  color: #333;
+  padding-right: 200px;
+  line-height: 55px;
+  margin-bottom: 45px;
+}
+
+@media (max-width: 1200px) {
+  .main-text__title {
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 640px) {
+  .main-text__title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+}
+
+.main-text__subtitle {
+  font-size: 20px;
+  line-height: 65px;
+  color: #333;
+}
+
+@media (max-width: 640px) {
+  .main-text__subtitle {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+}
+
+.main-image {
+  margin-left: 20px;
+}
+
+@media (max-width: 1200px) {
+  .main-image {
+    width: 100%;
+  }
+}
+
+.main-list {
+  margin: 40px 0 0 0;
+  padding: 0 0 0 0;
+}
+
+@media (max-width: 640px) {
+  .main-list {
+    margin: 30px 0 0 0;
+  }
+}
+
+.main-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 640px) {
+  .main-list__item {
+    margin-bottom: 15px;
+  }
+}
+
+.main-list__image {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #ffd200;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 30px;
+}
+
+.main-list__text {
+  color: #333;
+  font-size: 14px;
+  line-height: 24px;
+  max-width: 300px;
+}
+
+@media (max-width: 640px) {
+  .main-list__text {
+    font-size: 12px;
+    max-width: 250px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
