--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,10 @@ img
     max-width: 1170px
     width: 96%
     margin: auto
+    @media (max-width: 640px)
+        width: 90%
+    
+
 
 .button
     background-color: $buttons
@@ -47,3 +51,67 @@ img
         border-radius: 10px
         margin-left: 30px
         font-size: 13px
+
+.main
+    background-color: $grey 
+    &-block
+        display: flex
+        padding: 50px 0 40px 0
+        @media (max-width: 1200px)
+            flex-direction: column
+    &-text
+        @media (max-width: 1200px)
+            margin-bottom: 40px
+        flex-basis: 50%
+        &__title
+            font-size: 40px
+            color: $accent
+            padding-right: 200px
+            line-height: 55px
+            margin-bottom: 45px
+            @media (max-width: 1200px)
+                padding-right: 10px
+            @media (max-width: 640px)
+                font-size: 24px
+                line-height: 1.4
+        &__subtitle
+            font-size: 20px
+            line-height: 65px
+            color: $accent
+            @media (max-width: 640px)
+                font-size: 16px
+                line-height: 1.4
+    &-image
+        margin-left: 20px
+        @media (max-width: 1200px)
+            width: 100%
+    &-list
+        margin: 40px 0 0 0
+        padding: 0 0 0 0 
+        @media (max-width: 640px)
+            margin: 30px 0 0 0
+
+        &__item
+            display: flex
+            align-items: center
+            margin-bottom: 20px
+            @media (max-width: 640px)
+                margin-bottom: 15px
+        &__image
+            width: 40px
+            height: 40px
+            border: 2px solid #ffd200
+            border-radius: 50%
+            display: flex
+            align-items: center
+            justify-content: center
+            margin-right: 30px
+        &__text
+            color: $accent
+            font-size: 14px
+            line-height: 24px
+            max-width: 300px
+            @media (max-width: 640px)
+                font-size: 12px
+                max-width: 250px
+
