--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,8 @@
 @import "vars"
+@import "fonts"
 
 body
-    font-family: sans-serif
+    +reg
 
 img
     max-width: 100%
@@ -43,6 +44,7 @@ img
         color: $accent
         font-size: 20px
         font-weight: 400
+        +bold
         text-decoration: none
         display: block
         margin-top: 5px
@@ -51,6 +53,7 @@ img
         border-radius: 10px
         margin-left: 30px
         font-size: 13px
+        +bold
 
 .main
     background-color: $grey 
@@ -68,6 +71,7 @@ img
             color: $accent
             padding-right: 200px
             line-height: 55px
+            +bold
             margin-bottom: 45px
             @media (max-width: 1200px)
                 padding-right: 10px
