--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,11 @@
   font-style: normal;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: 'Museo Sans Light';
   font-weight: 300;
@@ -39,6 +44,20 @@ img {
   background-color: #ffd200;
   color: #333;
   border: none;
+  cursor: pointer;
+  padding: 18px 47px;
+  border-radius: 10px;
+}
+
+.button:hover {
+  background-color: #ffe466;
+}
+
+.input {
+  font-size: 15px;
+  border: 1px solid #dddddd;
+  padding: 25px;
+  border-radius: 10px;
 }
 
 .header {
@@ -207,6 +226,10 @@ img {
   margin-bottom: 20px;
 }
 
+.main-list__item:last-child {
+  margin-bottom: 0;
+}
+
 @media (max-width: 640px) {
   .main-list__item {
     margin-bottom: 15px;
@@ -242,5 +265,108 @@ img {
     font-size: 12px;
     max-width: 250px;
   }
+}
+
+.offer {
+  padding: 90px 0;
+  background: url("../img/offer-bg.jpeg") no-repeat;
+  background-position: center right;
+  background-size: contain;
+  position: relative;
+}
+
+@media (max-width: 1200px) {
+  .offer {
+    background-size: cover;
+  }
+}
+
+@media (max-width: 900px) {
+  .offer {
+    background: #fff;
+  }
+}
+
+.offer::before {
+  content: '';
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+}
+
+.offer-block {
+  width: 50%;
+  padding-right: 90px;
+  position: relative;
+}
+
+@media (max-width: 900px) {
+  .offer-block {
+    width: 100%;
+    padding-right: 0;
+  }
+}
+
+.offer-title {
+  margin-bottom: 25px;
+  font-size: 24px;
+  line-height: 35px;
+  max-width: 350px;
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+}
+
+.offer-subtitle {
+  display: inline-block;
+  max-width: 260px;
+  font-size: 16px;
+  margin-bottom: 35px;
+}
+
+.offer__input {
+  margin-bottom: 30px;
+  width: 240px;
+}
+
+@media (max-width: 1240px) {
+  .offer__input {
+    width: 100%;
+  }
+}
+
+.offer__input:first-child {
+  margin-right: 10px;
+}
+
+.offer__button {
+  width: 100%;
+  min-height: 70px;
+  margin-bottom: 30px;
+}
+
+.offer-addition {
+  font-size: 15px;
+  width: 177px;
+  height: 67px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-right: 130px;
+}
+
+.offer-supplement {
+  font-size: 15px;
+  width: 177px;
+  display: inline-table;
+}
+
+.offer-call {
+  text-decoration: none;
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+  color: #333;
 }
 /*# sourceMappingURL=style.css.map */
