--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,11 @@
 @import "vars"
 @import "fonts"
 
+*
+    box-sizing: border-box
+
 body
+    
     +reg
 
 img
@@ -20,6 +24,19 @@ img
     background-color: $buttons
     color: $accent
     border: none
+    cursor: pointer
+    padding: 18px 47px
+    border-radius: 10px
+    &:hover
+        background-color: lighten($buttons, 20% )
+
+
+.input
+    font-size: 15px
+    border: 1px solid $border-input
+    padding: 25px
+    border-radius: 10px
+
 
 .header
     padding: 20px 0
@@ -99,6 +116,8 @@ img
             display: flex
             align-items: center
             margin-bottom: 20px
+            &:last-child
+                margin-bottom: 0
             @media (max-width: 640px)
                 margin-bottom: 15px
         &__image
@@ -118,4 +137,70 @@ img
             @media (max-width: 640px)
                 font-size: 12px
                 max-width: 250px
+.offer
+    padding: 90px 0
+    background: url('../img/offer-bg.jpeg') no-repeat
+    background-position: center right
+    background-size: contain
+    position: relative
+    @media (max-width: 1200px)
+        background-size: cover
 
+
+    @media (max-width: 900px)
+        background: #fff
+    &::before
+        content: ''
+        width: 50%
+        height: 100%
+        position: absolute
+        background-color: #fff
+        top: 0
+        left: 0
+    &-block
+        width: 50%
+        padding-right: 90px
+        position: relative
+        @media (max-width: 900px)
+            width: 100%
+            padding-right: 0
+    &-title
+        margin-bottom: 25px
+        font-size: 24px
+        line-height: 35px
+        max-width: 350px
+        +bold
+    &-subtitle
+        display: inline-block
+        max-width: 260px
+        font-size: 16px
+        margin-bottom: 35px
+    &__input
+        margin-bottom: 30px
+        width: 240px
+        @media (max-width: 1240px)
+           width: 100%
+            
+        &:first-child
+            margin-right: 10px
+        
+    &__button
+        width: 100%
+        min-height: 70px
+        margin-bottom: 30px
+    &-addition
+        font-size: 15px
+        width: 177px
+        height: 67px
+        display: inline-flex
+        margin-right: 130px
+    &-supplement
+        font-size: 15px
+        width: 177px
+        display: inline-table
+    &-call
+        text-decoration: none
+        +bold
+        color: $accent
+
+        
