--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 img {
-  max-width: 95%;
+  max-width: 100%;
 }
 
 .container {
@@ -66,6 +66,13 @@ img {
   font-weight: 700;
   text-align: center;
   line-height: 45px;
+}
+
+.section-subtitle {
+  font-size: 20px;
+  color: #000;
+  text-align: center;
+  display: block;
 }
 
 .header {
@@ -411,6 +418,109 @@ img {
 
 .slider__image {
   margin: auto;
+}
+
+.price {
+  padding: 100px 0;
+}
+
+.price__title {
+  margin-bottom: 60px;
+}
+
+.price__subtitle {
+  margin-bottom: 60px;
+}
+
+.price__card {
+  margin-bottom: 30px;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card {
+  text-align: center;
+  border: 1px solid #e8e8e8;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover .card__image::before {
+  opacity: 1;
+}
+
+.card__text {
+  padding: 40px;
+}
+
+.card__title {
+  margin-top: 0;
+  font-size: 18px;
+  color: #000;
+  margin-bottom: 30px;
+}
+
+.card__image {
+  position: relative;
+}
+
+.card__image img {
+  display: block;
+}
+
+.card__image::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#ffd200), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%);
+  opacity: 0;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.card__link {
+  display: inline-block;
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+}
+
+.card__link:hover::after {
+  height: 13px;
+}
+
+.card__link::after {
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: -1;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #ffd200;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .modal {
