--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,7 +9,7 @@ body
     +reg
 
 img
-    max-width: 95%
+    max-width: 100%
 
 .container
     max-width: 1170px
@@ -42,7 +42,12 @@ img
     +bold
     text-align: center
     line-height: 45px
-    
+
+.section-subtitle
+    font-size: 20px
+    color: #000
+    text-align: center
+    display: block    
 
 .header
     padding: 20px 0
@@ -231,6 +236,80 @@ img
 
 .slider__image
     margin: auto
+
+.price
+    padding: 100px 0
+    &__title
+        margin-bottom: 60px
+    &__subtitle
+        margin-bottom: 60px
+    &__card
+        margin-bottom: 30px
+
+
+
+.cards
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    
+
+.card
+    text-align: center
+    border: 1px solid #e8e8e8
+    transition: .2s
+    &:hover
+        box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1 )
+        .card__image::before
+            opacity: 1
+    &__text
+        padding: 40px
+    &__title
+        margin-top: 0
+        font-size: 18px
+        color: #000
+        margin-bottom: 30px
+    &__image
+        position: relative
+        img
+            display: block
+        &::before
+            content: ''
+            position: absolute
+            left: 0
+            top: 0
+            width: 100%
+            height: 100%
+            background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%)
+            opacity: 0
+            transition: .2s
+
+    &__link
+        display: inline-block
+        +bold
+        text-decoration: none
+        color: $accent
+        position: relative
+        &:hover
+            &::after
+                height: 13px
+
+        &::after
+            content: ''
+            display: block
+            position: absolute
+            z-index: -1
+            bottom: -4px
+            left: 0
+            width: 100%
+            height: 3px
+            background-color: $buttons
+            transition: .2s
+
+
+
+
+
 
 
 .modal
