kodování sekce s krokami, mobilní verze

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -447,6 +447,14 @@ img {
           justify-content: space-between;
 }
 
+@media (max-width: 815px) {
+  .cards {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .card {
   text-align: center;
   border: 1px solid #e8e8e8;
@@ -521,6 +529,136 @@ img {
   background-color: #ffd200;
   -webkit-transition: .2s;
   transition: .2s;
+}
+
+.steps {
+  padding-bottom: 120px;
+}
+
+.steps__title {
+  margin-bottom: 40px;
+}
+
+.steps__subtitle {
+  margin-bottom: 75px;
+}
+
+.icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media (max-width: 955px) {
+  .icons {
+    margin: auto;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 50%;
+  }
+}
+
+@media (max-width: 680px) {
+  .icons {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.icon {
+  text-align: center;
+  position: relative;
+}
+
+.icon:last-child::after {
+  display: none;
+}
+
+.icon::after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: -10px;
+  right: -95px;
+  width: 72px;
+  height: 25px;
+  background-image: url("../img/itemArrow.png");
+}
+
+@media (max-width: 1150px) {
+  .icon::after {
+    display: none;
+  }
+}
+
+@media (max-width: 960px) {
+  .icon__text {
+    margin-bottom: 30px;
+  }
+}
+
+.icon__image {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  border: 3px solid #ffd200;
+  background-color: #fff;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+
+.icon__image img {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.icon__text {
+  max-width: 140px;
+  display: inline-block;
+  text-align: center;
+  font-size: 14px;
+}
+
+@media (max-width: 680px) {
+  .icon__text {
+    max-width: 160px;
+  }
+}
+
+.notice {
+  background-color: #ffc000;
+  padding: 100px 0;
+}
+
+.notice__text {
+  text-align: center;
+  font-size: 32px;
+  max-width: 750px;
+  margin: auto;
+  line-height: 50px;
+  font-weight: 300;
+}
+
+@media (max-width: 750px) {
+  .notice__text {
+    font-size: 20px;
+    max-width: 550px;
+    line-height: 30px;
+  }
 }
 
 .modal {
