validace formulaře, final mapa, reponzivita

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,7 @@
 @import "fonts"
 
 *
+    
     box-sizing: border-box
 
 body
@@ -451,10 +452,190 @@ img
         @media ( max-width: 880px )
             margin-bottom: 45px
 
+.brief
+    background-image: url('../img/brief-colorbg.png'), url('../img/brief-bg.jpg')
+    background-position: left center, center right
+    background-size: 50%, cover
+    background-repeat: repeat-y, no-repeat
+    padding: 100px 0
+    @media ( max-width: 768px )
+        background-image: url('../img/brief-colorbg.png'), url('../img/brief-bg.jpg')
+        background-position: top center, center bottom
+        background-size: 100% 50%, cover
+        background-repeat: repeat-x, no-repeat
+        padding: 100px 0
+    &-block
+        display: flex
+        @media ( max-width: 768px )
+            flex-direction: column 
+    &__interview
+        flex-basis: 50%
+    &__form
+        flex-basis: 50%
+        padding-left: 200px
+        text-align: center
+        @media ( max-width: 1200px )
+            padding-left: 30px
+        @media ( max-width: 768px )
+            padding-left: 0
+
+    &__input
+        width: 100%
+        max-width: 370px
+        margin-bottom: 15px
+    &__button
+        width: 100%
+        max-width: 370px
+        display: block
+        height: 70px
+        margin: 15px auto 30px auto
+
+        
+.interview
+    padding-right: 70px
+    @media ( max-width: 1200px )
+        padding-right: 30px
+    &__title
+        +bold
+        font-size: 22px
+        line-height: 33px
+        margin-bottom: 50px
+        @media ( max-width: 1200px )
+            font-size: 18px
+            margin-bottom: 40px
+
+    
+    &__subtitle
+        font-size: 16px    
+        margin-bottom: 100px
+        display: block
+        @media ( max-width: 1200px )
+            font-size: 14px
+            margin-bottom: 30px
 
 
 
+    &-list
+        list-style-type: none
+        padding: 0
+        &__item
+            display: flex
+            align-items: center
+            margin-bottom: 25px
+            +bold
+            @media ( max-width: 1200px )
+                font-size: 14px
+                
+        &__counter
+            width: 35px
+            height: 35px
+            border: 2px solid #000
+            display: inline-block
+            text-align: center
+            line-height: 35px
+            border-radius: 50%
+            margin-right: 30px
+            font-size: 14px
+            @media ( max-width: 1200px )
+                margin-right: 20px
 
+
+
+        &__text
+            max-width: 400px
+            font-size: 18px
+            @media ( max-width: 1200px )
+                font-size: 14px
+                max-width: 300px
+            @media ( max-width: 768px )
+                max-width: 250px
+
+
+.form
+    &__title
+        +bold
+        font-size: 22px
+        line-height: 33px
+        margin-bottom: 50px
+        @media ( max-width: 1200px )
+            font-size: 18px
+            margin-bottom: 40px
+            margin-top: 150px
+            
+    &__subtitle
+        font-size: 16px    
+        margin-bottom: 50px
+        display: block
+        @media ( max-width: 1200px )
+            font-size: 14px
+            margin-bottom: 40px
+
+    &__description
+        font-size: 15px
+        
+.footer
+    position: relative
+    @media ( max-width: 1200px )
+            display: flex
+            flex-flow: column-reverse
+    
+.map
+    width: 50%
+    position: absolute
+    left: 0
+    top: 0
+    @media ( max-width: 1200px )
+        width: 100%
+        position: relative
+
+.contacts
+    flex-basis: 50%
+    padding-top: 100px
+    padding-left: 200px
+    @media ( max-width: 1200px )
+        flex-basis: 100%
+        padding-top: 0
+        padding-left: 0
+
+   
+    &-block
+        display: flex
+        justify-content: flex-end
+        @media ( max-width: 1200px )
+            display: flex
+            justify-content: flex-start
+
+    &__title
+        +bold
+        font-size: 22px
+        line-height: 34px
+        margin-bottom: 100px
+    &-list
+        padding: 0
+        list-style: none
+            
+        &__icon
+            width: 20px
+            height: 20px
+            text-align: center
+            line-height: 20px
+            margin-right: 20px
+        &__item
+            display: flex
+            align-items: flex-start 
+            margin-bottom: 40px
+            strong
+                +bold 
+            @media ( max-width: 1200px )
+                 &:last-child
+                     margin-bottom: 60px
+        &__text
+            line-height: 1.4   
+            a
+                color: #000
+                text-decoration: none
+                &:hover
+                    text-decoration: underline
 
 .modal
     position: absolute
@@ -479,3 +660,5 @@ img
             right: 0
             top: 0
 
+.error
+    border: 1px solid red
