--- a/src/css/style.css
+++ b/src/css/style.css
@@ -776,6 +776,328 @@ img {
   }
 }
 
+.brief {
+  background-image: url("../img/brief-colorbg.png"), url("../img/brief-bg.jpg");
+  background-position: left center, center right;
+  background-size: 50%, cover;
+  background-repeat: repeat-y, no-repeat;
+  padding: 100px 0;
+}
+
+@media (max-width: 768px) {
+  .brief {
+    background-image: url("../img/brief-colorbg.png"), url("../img/brief-bg.jpg");
+    background-position: top center, center bottom;
+    background-size: 100% 50%, cover;
+    background-repeat: repeat-x, no-repeat;
+    padding: 100px 0;
+  }
+}
+
+.brief-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 768px) {
+  .brief-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.brief__interview {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.brief__form {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-left: 200px;
+  text-align: center;
+}
+
+@media (max-width: 1200px) {
+  .brief__form {
+    padding-left: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .brief__form {
+    padding-left: 0;
+  }
+}
+
+.brief__input {
+  width: 100%;
+  max-width: 370px;
+  margin-bottom: 15px;
+}
+
+.brief__button {
+  width: 100%;
+  max-width: 370px;
+  display: block;
+  height: 70px;
+  margin: 15px auto 30px auto;
+}
+
+.interview {
+  padding-right: 70px;
+}
+
+@media (max-width: 1200px) {
+  .interview {
+    padding-right: 30px;
+  }
+}
+
+.interview__title {
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  margin-bottom: 50px;
+}
+
+@media (max-width: 1200px) {
+  .interview__title {
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
+}
+
+.interview__subtitle {
+  font-size: 16px;
+  margin-bottom: 100px;
+  display: block;
+}
+
+@media (max-width: 1200px) {
+  .interview__subtitle {
+    font-size: 14px;
+    margin-bottom: 30px;
+  }
+}
+
+.interview-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.interview-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  .interview-list__item {
+    font-size: 14px;
+  }
+}
+
+.interview-list__counter {
+  width: 35px;
+  height: 35px;
+  border: 2px solid #000;
+  display: inline-block;
+  text-align: center;
+  line-height: 35px;
+  border-radius: 50%;
+  margin-right: 30px;
+  font-size: 14px;
+}
+
+@media (max-width: 1200px) {
+  .interview-list__counter {
+    margin-right: 20px;
+  }
+}
+
+.interview-list__text {
+  max-width: 400px;
+  font-size: 18px;
+}
+
+@media (max-width: 1200px) {
+  .interview-list__text {
+    font-size: 14px;
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  .interview-list__text {
+    max-width: 250px;
+  }
+}
+
+.form__title {
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  margin-bottom: 50px;
+}
+
+@media (max-width: 1200px) {
+  .form__title {
+    font-size: 18px;
+    margin-bottom: 40px;
+    margin-top: 150px;
+  }
+}
+
+.form__subtitle {
+  font-size: 16px;
+  margin-bottom: 50px;
+  display: block;
+}
+
+@media (max-width: 1200px) {
+  .form__subtitle {
+    font-size: 14px;
+    margin-bottom: 40px;
+  }
+}
+
+.form__description {
+  font-size: 15px;
+}
+
+.footer {
+  position: relative;
+}
+
+@media (max-width: 1200px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: column-reverse;
+            flex-flow: column-reverse;
+  }
+}
+
+.map {
+  width: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+@media (max-width: 1200px) {
+  .map {
+    width: 100%;
+    position: relative;
+  }
+}
+
+.contacts {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-top: 100px;
+  padding-left: 200px;
+}
+
+@media (max-width: 1200px) {
+  .contacts {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding-top: 0;
+    padding-left: 0;
+  }
+}
+
+.contacts-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media (max-width: 1200px) {
+  .contacts-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+.contacts__title {
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 34px;
+  margin-bottom: 100px;
+}
+
+.contacts-list {
+  padding: 0;
+  list-style: none;
+}
+
+.contacts-list__icon {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  margin-right: 20px;
+}
+
+.contacts-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 40px;
+}
+
+.contacts-list__item strong {
+  font-family: 'Museo Sans Bold';
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  .contacts-list__item:last-child {
+    margin-bottom: 60px;
+  }
+}
+
+.contacts-list__text {
+  line-height: 1.4;
+}
+
+.contacts-list__text a {
+  color: #000;
+  text-decoration: none;
+}
+
+.contacts-list__text a:hover {
+  text-decoration: underline;
+}
+
 .modal {
   position: absolute;
   left: 0;
@@ -806,5 +1128,9 @@ img {
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.error {
+  border: 1px solid red;
 }
 /*# sourceMappingURL=style.css.map */
